--- a/src/main/java/by/azzibom/tetris/view/swing/GameFrame.form
+++ b/src/main/java/by/azzibom/tetris/view/swing/GameFrame.form
@@ -2,22 +2,20 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="by.azzibom.tetris.view.swing.GameFrame">
   <grid id="27dc6" binding="contentField" layout-manager="GridBagLayout">
     <constraints>
-      <xy x="20" y="20" width="500" height="452"/>
+      <xy x="20" y="20" width="322" height="426"/>
     </constraints>
     <properties>
       <enabled value="true"/>
     </properties>
     <border type="none"/>
     <children>
-      <grid id="32c42" binding="gameFieldContainer" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="32c42" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
           <gridbag top="10" left="10" bottom="10" right="5" weightx="2.0" weighty="1.0"/>
         </constraints>
         <properties>
-          <maximumSize width="202" height="402"/>
-          <minimumSize width="202" height="402"/>
           <preferredSize width="202" height="402"/>
         </properties>
         <border type="line">
@@ -27,7 +25,7 @@
           <grid id="5f014" binding="gameField" custom-create="true" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <maximumSize width="200" height="400"/>
@@ -54,8 +52,6 @@
               <gridbag top="10" left="5" bottom="10" right="10" weightx="1.0" weighty="1.0"/>
             </constraints>
             <properties>
-              <maximumSize width="82" height="82"/>
-              <minimumSize width="82" height="82"/>
               <preferredSize width="82" height="82"/>
             </properties>
             <border type="line"/>
@@ -63,7 +59,7 @@
               <grid id="64ed7" binding="nextShapeField" custom-create="true" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <background color="-855310"/>
